<resources>
    <string name="app_name">MoviesApp</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="app_id">974564852597446</string>

    <string-array name="Tab">
        <item>NOW PLAYING</item>
        <item>UPCOMING MOVIES</item>
        <item>TOP RATED</item>
    </string-array>

    <string-array name="DescriptionTab">
        <item>DETAILS</item>
        <item>CAST</item>
        <item>SIMILAR MOVIES</item>
        <item>REVIEWS</item>
    </string-array>


    <string-array name="Tvtab">
        <item>AIRING TODAY</item>
        <item>ON THE AIR</item>
        <item>TOP RATED</item>
        <item>POPULAR</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_data">Loading Data</string>
    <string name="loading_more">Loading More Data...</string>
    <string name="NetworkError">NetWork Error</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="LoadingProfile">Loading Profile...</string>
    <string name="Nosimilar">NO SIMILAR MOVIE FOUND</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="com_facebook">Sign in with Facebook</string>
    <string name="as">as</string>
    <string name="rating">RATING:</string>
    <string name="overview">OVERVIEW</string>
    <string name="director">DIRECTOR:</string>
    <string name="budget">BUDGET:</string>
    <string name="date">DATE:</string>
    <string name="genre">GENRE:</string>
    <string name="a_movie_review_by">A movie review by</string>
    <string name="dehodendog">dehodendog</string>
    <string name="cast_picture">Cast picture</string>
    <string name="person_fact">Person Fact:</string>
    <string name="place_of_birth">Place Of Birth:</string>
    <string name="known_for">Known For:</string>
    <string name="upcoming">Upcoming:</string>
    <string name="casts">CASTS:</string>
    <string name="now_playing_in_theaters">Now Playing In Theaters</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="view_all">View All</string>
    <string name="in_theatre">In Theatre</string>
    <string name="tv_shows_airing_this_week">Tv Shows Airing This Week</string>
    <string name="tvshows">TvShows</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="search_for_movies">Search for Movies</string>
    <string name="first_air_date">First air date:</string>
    <string name="last_air_date">Last air date:</string>
    <string name="vote">Vote:</string>
    <string name="created_by">Created by:</string>
    <string name="season_no">Season no:</string>
    <string name="episodes">Episodes:</string>

</resources>
