<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="false"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:id="@+id/Movie_details"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/Movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text=""
        android:textColor="#4495f7"
        android:textSize="22sp"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:id="@+id/movieposter"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        android:layout_below="@+id/Movie_title"
        >
        <ImageView
            android:id="@+id/Movie_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/two"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Movie_title"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/genre"
        android:layout_toEndOf="@+id/movieposter"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/Movie_title"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/two"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="#113a66"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/three"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Movie_genre"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/date"
        android:layout_toEndOf="@+id/movieposter"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Movie_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/Movie_genre"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/three"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="#113a66"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/four"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/three"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/rating"
        android:layout_toEndOf="@+id/movieposter"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Movie_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/Movie_date"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/four"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="#113a66"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/fourr"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/four"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/budget"
        android:layout_toEndOf="@+id/movieposter"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Movie_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Movie_vote"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/four"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="#113a66"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/six"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fourr"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/director"
        android:layout_toEndOf="@+id/movieposter"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Movie_Director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Movie_budget"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/six"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="#113a66"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/movieposter"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:text="@string/overview"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/five"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text=""
        android:textColor="#113a66"

        android:textSize="14sp" />

</RelativeLayout>

</ScrollView>
